--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>FiTA (Finland Telugu Association)</title>		
 		<!-- Meta Description -->
-        <meta name="description" content="Blue One Page Creative HTML5 Template">
-        <meta name="keywords" content="one page, single page, onepage, responsive, parallax, creative, business, html5, css3, css3 animation">
-        <meta name="author" content="Muhammad Morshed">
+        <meta name="description" content="Finland Telugu Association Official Website">
+        <meta name="keywords" content="finland telugu FiTa FITA">
+        <meta name="author" content="Surendra Marthala">
 		
 		<!-- Mobile Specific Meta -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
