--- a/index.html
+++ b/index.html
@@ -523,8 +523,8 @@
 						<div class="col-md-5 wow animated fadeInRight">
 							<address class="contact-details">
 								<h3>Contact Us</h3>						
-								<p><i class="fa fa-pencil"></i>FiTA Organization.<span>PO Box 345678</span> <span>Little Lonsdale St, Leppavara </span><span>Finland</span></p><br>
-								<p><i class="fa fa-phone"></i>Phone: (415) 124-5678 </p>
+								<p><i class="fa fa-pencil"></i>FiTA Organization.<span>Some Number</span> <span>Somewhere in , Leppavara </span><span>Finland</span></p><br>
+								<p><i class="fa fa-phone"></i>Phone: (040) XXX-XXXX </p>
 								<p><i class="fa fa-envelope"></i>contact@finlandtelugu.org</p>
 							</address>
 						</div>
@@ -562,7 +562,7 @@
 								<li class="wow animated zoomIn" data-wow-delay="0.3s"><a href="#"><i class="fa fa-twitter fa-3x"></i></a></li>
 								<li class="wow animated zoomIn" data-wow-delay="0.6s"><a href="#"><i class="fa fa-skype fa-3x"></i></a></li>
 								<li class="wow animated zoomIn" data-wow-delay="0.9s"><a href="#"><i class="fa fa-dribbble fa-3x"></i></a></li>
-								<li class="wow animated zoomIn" data-wow-delay="1.2s"><a href="#"><i class="fa fa-youtube fa-3x"></i></a></li>
+								<li class="wow animated zoomIn" data-wow-delay="1.2s"><a href="https://www.youtube.com/channel/UC2q6Wo-z0lchk_K1jrYQaiA"><i class="fa fa-youtube fa-3x"></i></a></li>
 							</ul>
 						</div>
 						
