--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
 		<!-- Modernizer Script for old Browsers -->
         <script src="js/modernizr-2.6.2.min.js"></script>
+        <script src='https://www.google.com/recaptcha/api.js'></script>
 
     </head>
 	
@@ -80,8 +81,8 @@
                     <ul id="nav" class="nav navbar-nav">
                         <li><a href="#body">Home</a></li>
                         <li><a href="#service">Service</a></li>
-                        <li><a href="#portfolio">portfolio</a></li>
-                        <li><a href="#testimonials">Testimonial</a></li>
+                        <li><a href="#portfolio">Activities</a></li>
+                        <li><a href="#testimonials">About Us</a></li>
                         <li><a href="#price">price</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
@@ -542,17 +543,10 @@
 				<div class="row text-center">
 					<div class="footer-content">
 						<div class="wow animated fadeInDown">
-							<p>newsletter signup</p>
-							<p>Get Cool Stuff! We hate spam!</p>
+							<p>Social Media</p>
+							<p>We are always online ! Post your question!</p>
 						</div>
-						<form action="#" method="post" class="subscribe-form wow animated fadeInUp">
-							<div class="input-field">
-								<input type="email" class="subscribe form-control" placeholder="Enter Your Email...">
-								<button type="submit" class="submit-icon">
-									<i class="fa fa-paper-plane fa-lg"></i>
-								</button>
-							</div>
-						</form>
+
 						<div class="footer-social">
 							<ul>
 								<li class="wow animated zoomIn"><a href="https://www.facebook.com/groups/274881825939378/"><i class="fa fa-thumbs-up fa-3x"></i></a></li>
