--- a/registration.html
+++ b/registration.html
@@ -79,7 +79,7 @@
 				<!-- main nav -->
                 <nav class="collapse navbar-collapse navbar-right" role="navigation">
                     <ul id="nav" class="nav navbar-nav">
-                        <li><a href="#body">Home</a></li>
+                        <li><a href="./index.html">Home</a></li>
                         <li><a href="#service">Service</a></li>
                         <li><a href="#portfolio">Activities</a></li>
                         <li><a href="#testimonials">About Us</a></li>
@@ -113,7 +113,7 @@
 							<h2 class="wow animated bounceInLeft">Register for Ugadi Event 2018</h2>
 						</div>
 
-					<div class="alert alert-success" role="alert">
+					<div class="alert alert-danger" role="alert">
 					  <h4 class="alert-heading">Sponserd By</h4>
 					  <p>Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer so that you can see how spacing within an alert works with this kind of content.</p>
 					  <hr>
@@ -176,10 +176,28 @@
 							    <p class="mb-1">Ex: 2 Adults , 2 Kids</p>
 							  </a>
 							</div>
-
-
 					</div>
 
+					<div class="alert alert-success" role="alert">
+					  <h4 class="alert-heading"><i class="fa fa-map-marker" aria-hidden="true"> Venu</i> </h4>
+					  <p>Espoo International School, Lillhemintie 1, 02250, Espoo.</p>
+					  <hr>
+					  	
+					  	<i class="fa fa-calendar" aria-hidden="true"> 18 March 2018</i>
+					  	<br>
+					  	<i class="fa fa-clock-o" aria-hidden="true">  2:30PM – 6:30PM</i>
+					</div>
+
+					<div class="alert alert-success" role="alert">
+					  <h4 class="alert-heading"><i class="fa fa-list" aria-hidden="true"> Agenda</i> </h4>
+					  <hr>
+					  	
+					  	<ul class="list-group">
+						  <li class="list-group-item">Reception by Jyothi Prajwalana</li>
+						  <li class="list-group-item">Cultural activities</li>
+						  <li class="list-group-item">Dinner (Catering service)</li>
+						</ul>
+					</div>
 
 
 				</div>	
