--- a/registration.html
+++ b/registration.html
@@ -80,7 +80,7 @@
                 <nav class="collapse navbar-collapse navbar-right" role="navigation">
                     <ul id="nav" class="nav navbar-nav">
 
-                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="#body">Welcome</a></li>
                         <li><a href="#service">Service</a></li>
                         <li><a href="#portfolio">Activities</a></li>
                         <li><a href="#testimonials">About Us</a></li>
