--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <div class="caption-content">
                                 <h2 class="animated fadeInDown">ఉగాది ఉత్సవాలకు స్వాగతం సుస్వాగతం</h2>
                                 <span class="animated fadeInDown">రండి ! కలిసిమెలిసి పండగ చేసుకున్నం ... టిక్కెట్టు కేవలం €10 మాత్రమే   </span>
-                                <a href="./registration.html" class="btn btn-blue btn-effect">Register With US</a>
+                                <a href="./banner1.html" class="btn btn-blue btn-effect">Register With US</a>
                             </div>
                         </div>
 						
@@ -126,9 +126,9 @@
 						<div class="bg-img bg-img-2"></div>
 						<div class="slide-caption">
                             <div class="caption-content">
-                                <h2>BLUE Onepage HTML5 Template</h2>
-                                <span>Clean and Professional one page Template</span>
-                                <a href="#" class="btn btn-blue btn-effect">Join US</a>
+                                <h2>ఉల్లాసమయిన ఉగాది బాలల పోటీలు మీకోసం ....    </h2>
+                                <span>సరదాగా .... ఆనందంగా...</span>
+                                <a href="./banner2.html" class="btn btn-blue btn-effect">Join US</a>
                             </div>
                         </div>
 						
