--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
 						<div class="bg-img bg-img-3"></div>
 						<div class="slide-caption">
                             <div class="caption-content">
-                                <h2>BLUE Onepage HTML5 Template</h2>
-                                <span>Clean and Professional one page Template</span>
-                                <a href="#" class="btn btn-blue btn-effect">Join US</a>
+                                <h2>రాగం ...  తాళం ...  పల్లవి ...</h2>
+                                <span>మీ అందెలలో సాంకృత్తిక  కర్యాక్రమాలు</span>
+                                <a href="#" class="btn btn-blue btn-effect">Join with US</a>
                             </div>
                         </div>
 
