--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 						<div class="slide-caption">
                             <div class="caption-content">
                                 <h2>రాగం ...  తాళం ...  పల్లవి ...</h2>
-                                <span>మీ అందెలధ్వనిలో  సాంకృత్తిక  కర్యాక్రమాలు</span>
+                                <span>మీ అందెలధ్వనిలో ఉగాది సాంకృత్తిక  కర్యాక్రమాలు</span>
                                 <a href="#" class="btn btn-blue btn-effect">Join with US</a>
                             </div>
                         </div>
