--- a/banner2.html
+++ b/banner2.html
@@ -245,7 +245,7 @@
 							</ul>
 						</div>
 						
-						<p>Copyright &copy; 2017-2018 Design and Developed By <a href="./index.html">FiTA</a> </p>
+						<p>Copyright &copy; 2017-2018 Design and Developed By <a href="http://epireum.com/">Epireum</a> </p>
 					</div>
 				</div>
 			</div>
