--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 							</ul>
 						</div>
 						
-						<p>Copyright &copy; 2017-2018 Design and Developed By <a href="http://epireum.com/">Epireum</a> </p>
+						<p>Copyright &copy; 2017-2018 Design and Developed By <a href="www.epireum.com/">Epireum</a> </p>
 					</div>
 				</div>
 			</div>
