--- a/banner1.html
+++ b/banner1.html
@@ -104,9 +104,9 @@
 
 					<div class="alert alert-danger" role="alert">
 					  <h4 class="alert-heading">Sponserd By</h4>
-					  <p>Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer so that you can see how spacing within an alert works with this kind of content.</p>
-					  <hr>
-					  <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
+					  <h4><p>ఫిన్లాండ్ తెలుగు అసోసియేషన్ (FITA ) మరియు ఇండియన్ ఎంబసీ వారి సౌజన్యంతొ</p></h4>
+		
+					  
 					</div>
 
 
@@ -184,7 +184,7 @@
 					  	<ul class="list-group">
 						  <li class="list-group-item">Reception by Jyothi Prajwalana</li>
 						  <li class="list-group-item">Cultural activities</li>
-						  <li class="list-group-item">Dinner (Catering service)</li>
+						  <li class="list-group-item">Dinner</li>
 						</ul>
 					</div>
 
