--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 					<div class="row">
 					
 						<div class="sec-title text-center wow animated fadeInDown">
-							<h2>2017 హేవిళింబి నామ ఉగాది  సంవత్సరాపు కొన్ని మచ్చుతునకలు</h2>
+							<h2>2017 హేవిళింబి నామ ఉగాది  సంవత్సరపు కొన్ని మచ్చుతునకలు</h2>
 
 						</div>
 						
