--- a/banner1.html
+++ b/banner1.html
@@ -168,7 +168,7 @@
 					</div>
 
 					<div class="alert alert-success" role="alert">
-					  <h4 class="alert-heading"><i class="fa fa-map-marker" aria-hidden="true"> Venu</i> </h4>
+					  <h4 class="alert-heading"><i class="fa fa-map-marker" aria-hidden="true"> Venue</i> </h4>
 					  <p>Espoo International School, Lillhemintie 1, 02250, Espoo.</p>
 					  <hr>
 					  	
