--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 						<div class="slide-caption">
                             <div class="caption-content" >
                                 <h2 class="animated fadeInDown">ఉగాది ఉత్సవాలకు స్వాగతం సుస్వాగతం</h2>
-                                <span class="animated fadeInDown" ><label style="color:#FFFF00;">రండి ! కలిసిమెలిసి పండగ చేసుకున్నం ... </label> </span>
+                                <span class="animated fadeInDown" ><kbd style="color:#FFFF00;">రండి ! కలిసిమెలిసి ఒక్కటిగా సంబరాలు  చేసుకుందాం  ... </kbd> </span>
                                 <a href="./banner1.html" class="btn btn-blue btn-effect">Register With US</a>
                             </div>
                         </div>
@@ -127,7 +127,7 @@
 						<div class="slide-caption">
                             <div class="caption-content">
                                 <h2>ఉల్లాసమయిన ఉగాది బాలల పోటీలు మీకోసం ....    </h2>
-                                <span><label style="color:#FFFF00;">సరదాగా .... ఆనందంగా...</label></span>
+                                <span><kbd style="color:#FFFF00;">సరదాగా .... ఆనందంగా...</kbd></span>
                                 <a href="./banner2.html" class="btn btn-blue btn-effect">Join US</a>
                             </div>
                         </div>
@@ -140,7 +140,7 @@
 						<div class="slide-caption">
                             <div class="caption-content">
                                 <h2>రాగం ...  తాళం ...  పల్లవి ...</h2>
-                                <span><label style="color:#FFFF00;">మీ అందెలధ్వనిలో ఉగాది సాంకృత్తిక  కర్యాక్రమాలు</label></span>
+                                <span ><kbd style="color:#FFFF00;">మీ అందెలధ్వనిలో ఉగాది సాంకృత్తిక  కర్యాక్రమాలు</kbd></span>
                                 <a href="./banner3.html" class="btn btn-blue btn-effect">Join with US</a>
                             </div>
                         </div>
@@ -297,7 +297,7 @@
 						
 						<div class="col-md-6 wow animated fadeInUp">
 							<div class="price-table text-center">
-								<span>Executive Comittee</span>
+								<span>Executive Committee</span>
 								<div class="value">
 									<span>Sunil Sadhana</span>
 									<br>
