--- a/banner1.html
+++ b/banner1.html
@@ -182,7 +182,8 @@
 					  <hr>
 					  	
 					  	<ul class="list-group">
-						  <li class="list-group-item">Reception by Jyothi Prajwalana</li>
+						  <li class="list-group-item">Reception</li>
+						  <li class="list-group-item">Jyothi Prajwalana</li>
 						  <li class="list-group-item">Cultural activities</li>
 						  <li class="list-group-item">Dinner</li>
 						</ul>
